--- a/public/sass/partials/_layout.scss
+++ b/public/sass/partials/_layout.scss
@@ -1,17 +1,9 @@
 html {
-  font-size: 10px;
+  // font-size: 10px;
 }
 
 body {
-  background: $purple;
-  background:#efefef;
-  &:before {
-    content: '';
-    display: block;
-    background: $grad;
-    height: 10px;
-    width: 100%;
-  }
+  background: $canvas;
 }
 
 .inner {
