--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   justify-content: space-between;
-  background: $black;
+  background: $nav-bg;
   &__section {
     display: flex;
     &--search {
@@ -15,8 +15,8 @@
     display: flex;
   }
   &__link {
-    background: $black;
-    color: white;
+    background: $nav-bg;
+    color: $nav-inactive;
     border-right: 1px solid rgba(255,255,255,0.1);
     text-transform: uppercase;
     padding: 1.2rem 2rem 1rem 2rem;
@@ -30,17 +30,13 @@
     svg {
       width: 40px;
       transition: all 0.2s;
-      fill: white;
+      fill: $nav-inactive;
       margin-bottom: 1rem;
     }
     &:hover, &--active {
-      border-bottom-color: rgba(0,0,0,0.2);
-      border-right-color: rgba(0,0,0,0.05);
       svg {
         transform: scale(1.2)
       }
-      background: linear-gradient(90deg, #48ded4 0%, #a026bf 20%, #e82c75 60%, $yellow 85%, #48ded4 95%) fixed;
-      // background: none;
     }
     &--logo {
       &:hover {
