--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,5 +1,5 @@
 @import 'partials/variables';
-// @import 'partials/layout';
+@import 'partials/layout';
 @import 'partials/normalize';
 // @import 'partials/typography';
 // @import 'partials/forms';
